# qa_guru_lesson_17

./: pyproject.toml  schemas.py
tests/: test_reqres.py
